2005-01-11  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* links.php:
	Added link to FvwmOsd.

2005-01-06  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* index.php: 
	Removed banner against software patents.

2004-12-27  Mikhael Goikhman  <migo@homemail.com>

	* documentation/manpages/manpages2php:
	* documentation/manpages/unstable/*.php:
	update script and regenerate 2.5.x man pages

2004-12-20  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* index.php: 
	Added banner against software patents.

2004-12-07  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* All php related files:
	Changed include to include_once when including definitions.inc

	* definitions.inc:
	Removed check which should avoid double loading.

2004-12-06  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* links.php: 
	Changed second link to Suzanne Skinners page.

2004-12-02  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* links.php: 
	Changed links to Suzanne Skinners homepage.

2004-11-09  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* screenshot/desktops/Chris_Debenham-1400x1050/*
	Added screenshot of Chris Debenham.

2004-11-08  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* index.php: 
	* links.php:
	Added link to new fvwm forum page. Changed link to wiki.
	Changed link to Glens page.
	
2004-10-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated

	* definitions.inc:
	updated for 2.5.12

2004-09-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated

	* definitions.inc:
	updated for 2.5.11 and 2.4.19

2004-08-14  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* web-theme/classes/blue_class.inc:
	* web-theme/themes/blue_theme.inc:
	Fixed variable access to avoid error logs.

	* robots.txt:
	Added robots.txt to avoid error messages.

2004-08-12  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* links.php:
	Added link from Andrew Dolgov.
