@@ -44,6 +44,11 @@ if( strlen("$site_has_been_loaded") == 0 ) {
 <h3>Here you can see <a href="<?php echo conv_link_target('pictures/index.php'); ?>">pictures</a> of some FVWM authors</h3>
 
 
+<h4 class="author">Arnaud Vrac</h4>
+<p class="author">
+Patch which fixes maximize by growing vs EWMH working area
+</p>
+
 <h4 class="author">Rafal Bisingier</h4>
 <p class="author">
 WindowLayer and Layers options to the Maximize command. EdgeLeaveCommand
