@@ -1,3 +1,10 @@
+2005-02-13  Mikhael Goikhman  <migo@homemail.com>
+
+	* authors/index.php:
+	* news/index.php:
+	* documentation/faq/index.php:
+	regenerated
+
 2005-01-11  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
 
 	* links.php:
